--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
@@ -85,6 +85,7 @@
                             disabled="#{explorerBean.checkedItems.isEmpty()}"
                             rendered="#{explorerBean.isFavoriteSelected()}"
                             update="#{_frmExpl}"
+                            oncomplete="initDND()"
                             actionListener="#{explorerBean.onDelCheckedFromFavorites()}"/>
                 <p:separator />
 
